--- a/src/assets/styles/navbar/navBar.scss
+++ b/src/assets/styles/navbar/navBar.scss
@@ -54,7 +54,6 @@
 
 // Active hamb
 .navbar .nav.active {
-	overflow: hidden;
 	top: 0;
 
 	.navbar__active {
